fix edge article pseudo content and font spacing

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -218,14 +218,6 @@ section{
     }
   }
 }
-@supports not (place-items: center) {//edge
-  .projects > div{
-    margin: 0 auto;
-  }
-  h1::after{
-    width: 50%;
-  }
-}
 .arts > div,
 #about p{
   & a{
@@ -293,6 +285,21 @@ section{
   @media #{$upsize_text}{
     width: 1000px;
     margin: 0 auto;
+  }
+}
+@supports not (place-items: center) {//edge
+  .projects > div{
+    margin: 0 auto;
+  }
+  h1::after{
+    width: 50%;
+  }
+  .arts > div a{
+    letter-spacing: -1px;
+    &::before,
+    &::after{
+      display: none;
+    }
   }
 }
 area{
